# grooveseq

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  SamplePad.cpp  SamplePad.h  Sequencer.cpp  Sequencer.h  SequencerGrid.cpp  SequencerGrid.h
scripts/: build_vst3.sh
